syntax = "proto3";
option go_package = "/pb";
message table_meta {
  int64 partitions = 1;
  int32 total_fields = 2;
  string partition_key_name = 3;
  string partition_key_type = 4;
  string sort_key_name = 5;
  string sort_key_type = 6;
  repeated string other_fields_names = 7;
  repeated string other_fields_types = 8;
}